service.yaml
apiVersion: v1
kind: Service  
metadata:
  name: hello-svc
spec:  
  selector: 
    app: hello-deploy    
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
      nodePort: 30007
